2003-05-19  Larry Ewing  <lewing@ximian.com>

	* e-charset-picker.c: port to GtkDialog.

2003-05-14  JP Rosevear  <jpr@ximian.com>

	* e-combo-button.c (impl_destroy): guard against multiple destroys

2003-05-13  Ettore Perazzoli  <ettore@ximian.com>

	[#42628]
	* e-search-bar.c (search_now_verb_cb): Call
	emit_search_activated() instead of emit_query_changed().

2003-05-11  Chris Toshok  <toshok@ximian.com>

	[ fixes bug #42177 ]
	* e-dateedit.c (e_date_edit_init): remove the CAN_FOCUS flag.

2003-05-09  Ettore Perazzoli  <ettore@ximian.com>

	* e-combo-button.c (menu_deactivate_callback): Set in_button to
	FALSE; this makes sure the button gets the right appearance after
	the menu is popped down (the reason why this is necessary is that
	the widget doesn't never gets to the leave_notify event).

2003-05-07  JP Rosevear  <jpr@ximian.com>

	* e-search-bar.c (e_search_bar_set_text): trash e_utf8_gtk function
	(e_search_bar_get_text): ditto

2003-04-29  Dan Winship  <danw@ximian.com>

	* e-dateedit.c (e_date_edit_forall): Remove this so that
	GtkContainer's destroy method will destroy all of the internal
	widgets. (This is how other compound-widgets-that-aren't-
	meant-to-be-used-as-containers behave.) #41458

2003-04-16  Ettore Perazzoli  <ettore@ximian.com>

	* e-search-bar.c (remove_bonobo_menus): Only do the actual remove
	if the ui component actually has a container; this suppresses a
	BonoboUI warning at each folder view switch.

2003-04-15  Hans Petter Jansson  <hpj@ximian.com>

	* e-calendar-item.c (e_calendar_item_update): Unref the metrics.
	(e_calendar_item_draw): Re-use the widget's context instead of
	creating a new one. Unref the metrics.
	(e_calendar_item_draw_month): Unref the metrics. Don't create the
	layout where it might be leaked by an early return. Unref the layout
	before returning if we're outside the clip area.
	(e_calendar_item_draw_day_numbers): Unref the metrics.
	(e_calendar_item_recalc_sizes): Unref the metrics.